@@ -397,7 +397,6 @@ extern "C" {
 #define EXCEPTION_EXECUTE_HANDLER 1
 #define EXCEPTION_CONTINUE_EXECUTION (-1)
 #define EXCEPTION_CONTINUE_SEARCH 0
-#define TLS_MINIMUM_AVAILABLE 64
 #define MAXINTATOM 0xC000
 #define INVALID_ATOM ((ATOM)0)
 #define IGNORE	0
